[package]
name = "async_deadpool_redis_session"
version = "0.1.0"
edition = "2021"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/async_deadpool_redis_session"
repository = "https://github.com/iamsauravsharma/async_deadpool_redis_session"
description = "deadpool redis async session"
license = "MIT"
readme = "README.MD"
keywords = ["async_session", "deadpool", "async", "pool", "redis"]


[dependencies]
async-session = "3.0.0"
async-trait = "0.1.72"
deadpool-redis = "0.12.0"
serde_json = "1.0.104"
