[package]
name = "async_deadpool_redis_session"
version = "0.3.0"
edition = "2021"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/async_deadpool_redis_session"
repository = "https://github.com/iamsauravsharma/async_deadpool_redis_session"
description = "deadpool redis async session"
license = "MIT"
readme = "README.MD"
keywords = ["async_session", "deadpool", "async", "pool", "redis"]
categories = ["database"]


[dependencies]
async-session = "3.0.0"
async-trait = "0.1.72"
deadpool-redis = { version = "0.13.0", default-features = false }
serde_json = "1.0.104"
thiserror = "1.0.44"

[features]
default = ["tokio1"]
tokio1 = ["deadpool-redis/rt_tokio_1"]
async-std1 = ["deadpool-redis/rt_async-std_1"]
